--- a/angular.json
+++ b/angular.json
@@ -60,14 +60,20 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+
           "configurations": {
             "production": {
               "browserTarget": "money_transfer:build:production"
+            },
+            "options": {
+              "browserTarget": "your-app:build",
+              "proxyConfig": "proxy.conf.json"
             },
             "development": {
               "browserTarget": "money_transfer:build:development"
             }
           },
+
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
