--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/cli": "^16.2.14",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^2.0.1",
     "http-proxy-middleware": "^3.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
